<?xml version="1.0"?>
<package format="2">
  <name>yoctopuce_altimeter</name>
  <version>0.1.0</version>
  <description>ROS publisher for the Yoctopuce altimeter</description>

  <maintainer email="amstrudy@gmail.com">Anja Sheppard</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/yoctopuce_altimeter</url>
  <url type="bugtracker">https://github.com/amstrudy/yoctopuce_altimeter/issues</url>
  <url type="repository">https://github.com/amstrudy/yoctopuce_altimeter</url>

  <author email="amstrudy@gmail.com.com">Anja Sheppard</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
